--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,38 +1,64 @@
-.App {
+ * {
+  background-color: #13131b;
+ }
+
+ header {
+  color: #fff;
+  padding: 10px 20px;
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #000000;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
+  min-height: 20vh;
+  justify-content: center;
 }
 
-.App-link {
-  color: #61dafb;
+.header-button{
+  display: inline-block;
+  width: 20%;
+  padding: 10px 20px;
+  margin: 20px;
+  background-color: #a6a3be;
+  color: #fff;
+  text-decoration: none;
+  border-radius: 10px;
+  cursor: pointer;
+  text-align: center;
+  transition: background-color 0.3s;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+#datalist {
+  text-align: right;
+  font-size: medium;
+  color: aqua;
+}
+
+ body {
+  font-family: Arial, sans-serif;
+  margin: 0;
+  padding: 0;
+  background-color: #07012e;
+  color: #fff;
+}
+
+button {
+  display: inline-block;
+  width:auto;
+  padding: 10px 20px;
+  margin: 20px;
+  background-color: #4227a0;
+  color: #ffffff;
+  text-decoration: none;
+  border-radius: 10px;
+  cursor: pointer;
+  text-align: center;
+  /* transition: background-color 0.3s; */
+}
+
+.container {
+  max-width: 800px;
+  margin: 0 auto;
+  padding: 20px;
+}
+
+.center {
+  text-align: center;
 }
