--- a/client/src/App.css
+++ b/client/src/App.css
@@ -23,8 +23,9 @@ body {
   width: 100%;
   display: flex;
   justify-content: center;
-  gap: 50px;
+  gap: 20px;
   margin-bottom: 20px;
+  align-items: center;
 }
 
 .App .button-group .login-section {
@@ -35,7 +36,7 @@ body {
 
 .App .button-group .logout-button {
   position: fixed;
-  bottom: 20px;
+  bottom: 40px;
   right: 20px;
   z-index: 1000;
   width: 100px; /* Adjust as needed */
@@ -278,6 +279,11 @@ body {
   padding: 10px 0;
   height: 50px;
   color: #fff;
+  font-family: "Roboto Slab", serif;
+  font-size: 14px;
+  font-optical-sizing: auto;
+  font-weight: 300;
+  font-style: normal;
 }
 
 .error {
@@ -332,5 +338,40 @@ body {
   }
   50% {
       transform: scale(1.0)
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .App {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .App .button-group {
+    flex-direction: column;
+    gap: 20px;
+    justify-content: center;
+    align-items: center; /* Add this line */
+  }
+
+  .App .button-group button {
+    font-size: 12px; /* Adjust as needed */
+    padding: 5px; /* Adjust as needed */
+    width: 100px; /* Adjust as needed */
+  }
+  .App .data-display {
+    width: 95%;
+  }
+
+  .data-display .search-input {
+    width: 150px;
+  }
+
+  .data-display .search-input:focus {
+    width: 200px;
+  }
+
+  .footer {
+    display: none;
   }
 }
