--- a/client/src/App.css
+++ b/client/src/App.css
@@ -151,19 +151,20 @@ body {
 
 .App .data-display .card {
   position: relative;
-  border: 1.5px solid #000;
+  border: 2px solid #000;
+  border-width: 2px 3px;
   padding: 10px;
   margin-bottom: 10px;
   display: flex;
   align-items: center;
   border-radius: 12px;
+  perspective: 1000px;
+  transition: transform .8s cubic-bezier(0.5, 1.5, 0.5, 1);
 }
 
-.App .data-display .card:hover {
-  transform: scale(1.00);
-  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23); /* Add box-shadow on hover */
+.App .data-display .card.single-card {
+  margin-bottom: 0px;
 }
-
 
 .App .data-display .card p {
   color: #000;
@@ -176,9 +177,82 @@ body {
   text-align: center;
   margin-bottom: 10px;
   padding: 5px;
-  border-bottom: 1px solid #000000;
   background-color: #f9f9f900;
   flex-grow: 1;
+}
+
+.App .data-display .card:hover {
+  transform: scale(1.01);
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23); /* Add box-shadow on hover */
+}
+
+.App .data-display .card-front {
+  position: relative;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  backface-visibility: hidden;
+  border-radius: 12px;
+  background-color: transparent; /* Match the front background color */
+  padding: 0px;
+  display: flex;
+  align-items: center;
+}
+
+.App .data-display .card-back {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  transform: rotateY(0deg);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 12px;
+  display: flex;
+  flex-direction: row;
+}
+
+.App .data-display .card-back p {
+  transform: rotateY(180deg);
+}
+
+.card-image {
+  width: 4vw;
+  height: 4vw;
+  object-fit: cover;
+  right: 1vw;
+  position: absolute;
+  border-radius: 10%;
+}
+
+.card-image-placeholder {
+  width: 4vw;
+  height: 4vw;
+  object-fit: cover;
+  right: 1vw;
+  position: absolute;
+  border-radius: 10%;
+  visibility: hidden;
+}
+
+.card-text {
+  flex-grow: 1;
+  text-align: center;
+  }
+
+.App .data-display .card.active {
+  transform: rotateY(180deg);
+}
+
+.App .data-display .card.active:hover {
+  transform: rotateY(180deg) scale(1.01);
+}
+
+.App .data-display .card.active .card-front {
+  transform: rotateY(180deg);
 }
 
 .App .data-display .card .fa-plus {
